--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,8 +3,8 @@ name: Docker Image CI
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    tags:
+      - '*'
 
 jobs:
   build:
@@ -20,6 +20,13 @@ jobs:
       run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Tag and Push Docker image
+      id: tag
       run: |
-        docker tag certbot-dns-aliyun:main aiyax/certbot-dns-aliyun:latest
-        docker push aiyax/certbot-dns-aliyun:latest
+        echo "::set-output name=tag::$(echo ${GITHUB_REF#refs/tags/})"
+        if [[ "${{ github.ref }}" == "refs/tags"* ]]; then
+          docker tag certbot-dns-aliyun:main aiyax/certbot-dns-aliyun:${{ steps.tag.outputs.tag }}
+          docker push aiyax/certbot-dns-aliyun:${{ steps.tag.outputs.tag }}
+        else
+          docker tag certbot-dns-aliyun:main aiyax/certbot-dns-aliyun:latest
+          docker push aiyax/certbot-dns-aliyun:latest
+        fi
