--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,13 +20,12 @@ jobs:
       run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Tag and Push Docker image
-      id: tag
       run: |
-        echo "::set-output name=tag::$(echo ${GITHUB_REF#refs/tags/})"
         if [[ "${{ github.ref }}" == "refs/tags"* ]]; then
-          docker tag certbot-dns-aliyun:main ${{ secrets.DOCKERHUB_USERNAME }}/certbot-dns-aliyun:${{ steps.tag.outputs.tag }}
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/certbot-dns-aliyun:${{ steps.tag.outputs.tag }}
+          tag=$(echo "${{ github.ref }}" | sed -e "s/refs\/tags\///")
+          docker tag certbot-dns-aliyun:main ${{ secrets.DOCKERHUB_USERNAME }}/certbot-dns-aliyun:${tag}
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/certbot-dns-aliyun:${tag}
         else
-          docker tag certbot-dns-aliyun:main aiyax/certbot-dns-aliyun:latest
+          docker tag certbot-dns-aliyun:main ${{ secrets.DOCKERHUB_USERNAME }}/certbot-dns-aliyun:latest
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/certbot-dns-aliyun:latest
         fi
